# FairLane

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  LICENSE  Makefile  Procfile  README.md  debug_dataframe.py  firebase.json  instrumentation.py  pyproject.toml  test.py
.firebase/: hosting.Y29uc29sZVxkaXN0.cache
.gemini/: settings.json
.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
agents/: __init__.py  counterfactual.py  disparity.py  orchestrator.py  router.py  underwriting.py
agents/prompts/: decision_router.md  disparity_judge.md  underwriting_reasoner.md
api/: __init__.py  main.py
compliance/: __init__.py  logger.py
console/: .env.example  .firebaserc  .gcloudignore  index.html  package-lock.json  package.json
console/src/: App.tsx  api.ts  index.css  mockData.ts  types.ts
console/src/components/: ActionBar.tsx  ApplicationCard.tsx  DecisionBadge.tsx  FairnessPanel.tsx  JudgeScoreBar.tsx  ObservabilityTab.tsx  Skeleton.tsx
data/: __init__.py  curate_dataset.py  fairlane.db  ingest_hmda.py  schema.py
observability/: __init__.py  drift_monitor.py  evals.py  mcp_client.py  phoenix_setup.py
tests/: __init__.py  smoke_trace.py  test_api.py  test_counterfactual.py  test_data.py  test_disparity.py  test_orchestrator.py  test_underwriting.py
