[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fairlane"
version = "0.1.0"
description = "Fair-lending agent with counterfactual demographic audit and Arize Phoenix observability"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "google-adk>=2.0.0",
    "google-genai>=1.72",
    "openinference-instrumentation-google-adk>=0.1.15",
    "openinference-instrumentation-google-genai>=1.0.2",
    "arize-phoenix>=8.0",
    "opentelemetry-sdk>=1.36,<=1.41.1",
    "opentelemetry-exporter-otlp>=1.36,<=1.41.1",
    "pandas>=2.2",
    "pydantic>=2.7",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["agents", "data", "observability", "compliance", "api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
